style.css
body, container {
    display: flex;
    justify-content: center;
    background: #DAF7A6;
    font-family: "Orbitron", sans-serif;
    
}
.calculator {
    background-color: #333333;
    display: flex;
    flex-direction: column; 
    border-radius: 8%;
    box-shadow: 5px;
    box-shadow: 0px 10px 0px #1a1a1a;    
    margin-top: 4em;
    
    
}

#title {
    display: flex;
    align-self: center;
    padding: 1em 2.5em 0 2.5em;
    font-size: 1.8em;
    color: #cc6600;
}

#screen {
    display: flex;
    flex-direction: column-reverse;
    align-items: flex-end;
    justify-items: flex-end;
    align-self: center;

    height: 80px;
    width: 75%;
    border: 2px solid #666666;
    padding: 10px;
    margin: 1.5em 0;
    
    border-radius: 8%;
    background-color: #EAECEE;
    
}

#screen-num {
    font-size: 3em;
    margin: 0px 0px -4px 0px;
    /* padding: -3px 0 0 0; */
}
#screen-text {
    font-size: 1.5em;
    margin: 0px;
    padding: 0px;
    color: #999999;
}

.buttons {
    display: flex;
    justify-content: center;
    align-items: center;
    height: 100%;
    margin-bottom: 1em;
}

.key {
    font-size: 2em;
    display: flex;
    justify-content: center;
    align-items: center;
    /* flex-grow: 1; */
    cursor: pointer;
    padding-top: 8px;
    margin: 5px;
    background-color: darkgrey;     
    border-radius: 8%;
    box-shadow: 0px 5px 0px #1a1a1a;    
}

key:active {
    box-shadow: inset 0 0;        
}

.op {
    background-color: #666666
}
 .num {
     background-color: #EAECEE;
 }

.orange {
    background-color: #cc6600;
}

.calc-col {
    width: 5em;
    height: 16em;
    display: flex;
    flex-direction: column;
    /* justify-content: baseline; */
}

#k0 {
  width: 4.7em;
}

/*how would i use flexbox to make this twice the height?  */
#equals {  
    height: 2.55em;
}

